--- a/views/index.jade
+++ b/views/index.jade
@@ -6,25 +6,30 @@ block content
     #icons
       .icon
         .container
-          h1 Founded in 1979 by Mario Rosito with the DNA for excellence in foodservice offering
+          h1
+            span Founded in 1979 by Mario Rosito with the DNA for excellence in foodservice, offering
           ul
-            li.
-              <img src="/img/pizza-oven-icon.png" />
-              <br /><span><b>Pizza Ovens</b></span>
-            li.
-              <img src="/img/pasta-icon.png" />
-              <br /><span><b>Pasta Equipment</b></span>
-            li.
-              <img src="/img/gelato-icon.png"  />
-              <br /><span><b>Gelato Machines</b></span>
-            li.
-              <img src="/img/espresso-machine-icon.png"  />
-              <br /><span><b>Espresso Machines</b></span>
-            li.
-              <img src="/img/juicers-icon.png"  />
-              <br /><span><b>Juicers</b></span>
+            li
+              .circle-bg
+                img(src="/img/pizza-oven-icon.png")
+              h2 Pizza Ovens
+            li
+              .circle-bg
+                img(src="/img/pasta-icon.png")
+              h2 Pasta Equipment
+            li
+              .circle-bg
+                img(src="/img/gelato-icon.png") 
+              h2 Gelato Machines
+            li
+              .circle-bg
+                img(src="/img/espresso-machine-icon.png") 
+              h2 Espresso Machines
+            li
+              .circle-bg
+                img(src="/img/juicers-icon.png") 
+              h2  Juicers
     section
-      img(src="/img/bg-module-top-shadow.png")
       .container
         h1 Our Company Story 
         p.
