--- a/public/css/fonts.less
+++ b/public/css/fonts.less
@@ -32,3 +32,50 @@
      	     url("@{base-url}/@{folder}/@{name}-webfont.ttf") format('truetype'),
      	     url("@{base-url}/@{folder}/@{name}-webfont.svg#") format('svg');
 }
+
+
+@font-face{ 
+	font-family: 'SinaNova';
+	@folder: 'SinaNova';
+	@name: 'SinaNova';
+	src: url("@{base-url}/@{folder}/@{name}.eot");
+   	src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format('embedded-opentype'),
+     	     url("@{base-url}/@{folder}/@{name}.woff") format('woff'),
+     	     url("@{base-url}/@{folder}/@{name}.ttf") format('truetype'),
+     	     url("@{base-url}/@{folder}/@{name}.svg#") format('svg');
+}
+
+@font-face{ 
+	font-family: 'Nexa-Bold';
+	@folder: 'Nexa-Bold';
+	@name: 'Nexa-Bold';
+	src: url("@{base-url}/@{folder}/@{name}.eot");
+   	src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format('embedded-opentype'),
+     	     url("@{base-url}/@{folder}/@{name}.woff") format('woff'),
+     	     url("@{base-url}/@{folder}/@{name}.ttf") format('truetype'),
+     	     url("@{base-url}/@{folder}/@{name}.svg#") format('svg');
+}
+
+@font-face{ 
+	font-family: 'Asap';
+	@folder: 'Asap';
+	@name: 'Asap-Regular';
+	src: url("@{base-url}/@{folder}/@{name}-webfont.eot");
+   	src: url("@{base-url}/@{folder}/@{name}-webfont.eot?#iefix") format('embedded-opentype'),
+     	     url("@{base-url}/@{folder}/@{name}-webfont.woff") format('woff'),
+     	     url("@{base-url}/@{folder}/@{name}-webfont.ttf") format('truetype'),
+     	     url("@{base-url}/@{folder}/@{name}-webfont.svg#") format('svg');
+}
+
+@font-face {
+    font-family: 'LinuxLibertine';
+    src: url('/fonts/Linux-Libertine/linlibertine_re-4.7.5ro-webfont.eot');
+    src: url('/fonts/Linux-Libertine/linlibertine_re-4.7.5ro-webfont.eot?iefix') format('eot'),
+         url('/fonts/Linux-Libertine/linlibertine_re-4.7.5ro-webfont.woff') format('woff'),
+         url('/fonts/Linux-Libertine/linlibertine_re-4.7.5ro-webfont.ttf') format('truetype'),
+         url('/fonts/Linux-Libertine/linlibertine_re-4.7.5ro-webfont.svg#webfontIgdJI780') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
