--- a/public/css/main.less
+++ b/public/css/main.less
@@ -62,6 +62,8 @@ h1, h2, h3 {
 body {
   //background-color: #f8f8f8;
   //padding-top: 70px;
+  //background-color: #EFEFEF;
+ 
 }
 
 
@@ -170,7 +172,7 @@ form {
 .navbar .navbar-inner {
   .border-radius(0);
   border: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #fff;
   background: @red !important;
   //#gradient > .vertical(@red, darken(@red, 10%));
   .nav .active > a {
@@ -231,18 +233,41 @@ form {
 
 /* ==========================================================================
    Icons 
-   ========================================================================== */
+  ======================================================================== */
 #icons {
-  margin-top: 20px;
+  padding-top: 40px;
+  background-color: #111;
+  //background-color: #333;
+  //background-color: #535353;
+  padding-bottom: 40px;
+  border-top: 5px solid #333;
 }
 #icons .container { 
   width: 1170px;
 }
 
 #icons h1 {
+  font-family: SinaNova, arial;
   font-family: Quicksand-Book, arial;
   font-weight: normal;
   text-align: center;
+  text-shadow: 1px 1px 0px #111;
+  //colr:#ec1c2d; 
+  color: white;
+  font-size: 46px;
+  span {
+    //background-color: #fff;
+    //background-color: @red; 
+    //padding: 7px;
+  }
+
+  span.first {
+    //font-size: 44px;
+  }
+  span.second {
+    //font-size: 32px;
+  }
+ 
 }
 
 #icons .icon {
@@ -253,20 +278,42 @@ form {
 }
 
 #icons .icon img {
-  height: 100px;
+  height: 115px;
+  padding-top: 20px;
+  //display: inline-block;
 }
 
 #icons ul {
   list-style: none;
   .clearfix;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 #icons li {
   float: left;
   margin: 0 33px;
   text-align: center;
+  //color: @red;
 }
+
+#icons .circle-bg {
+  width: 163px;
+  height: 163px;
+  background-color: #fff;
+  background-color: @red; 
+  border-radius: 115px;
+  margin: 0 auto;
+}
+
+
+#icons h2{  
+  font-weight: normal;
+  font-size: 18px;
+  color: @red;
+  color: #fff;
+  font-family: Nexa-Bold, arial;
+}
+
 
 
 #icons li span {
@@ -284,13 +331,32 @@ form {
   margin-top: 20px;
 }
 
+#home section h1 {
+  font-family: SinaNova, arial;
+  font-family: Quicksand-Book, arial;
+  font-family: Nexa-Bold, arial;
+  font-family: Asap, arial;
+  font-family: LinuxLibertine;
+  font-weight: normal;
+  font-size: 44px;
+}
+
+#home hr {
+  height: 1px;
+  background-color: #fff;
+}
+
 #home .container {
   width: 1170px;
 }
 #home p {
-  line-height: 1.3;
+  line-height: 1.7;
   padding: 20px;
-  font-size: 20px;
+  font-size: 18px;
+  //font-family: SinaNova, arial;
+  //font-family: Quicksand-Book, arial;
+  font-family: 'Libre Baskerville', serif;
+  font-weight: normal;
 }
 /* ==========================================================================
    Footer 
