--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,12 +10,12 @@ html(lang="en")
     meta(name='description', content='Serving the needs of the foodservice industry')
     link(rel='shortcut icon', href='/img/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
+    link(href='http://fonts.googleapis.com/css?family=Libre+Baskerville', rel='stylesheet', type='text/css')
     //- HTML5 shim, for IE6-8 support of HTML5 elements
     //if lt IE 9
       script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
       script(src='/js/libs/respond.js')
 
-    // make 2 lines later
     if locals.env === 'production' 
       script(data-main='js/main-built', src='/js/libs/require.js')
     else 
