proper size logos

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -183,9 +183,6 @@ form {
       background-color: @red;
     }
   }
-
-
-
 }
 
 .navbar .container {
@@ -199,15 +196,15 @@ form {
 }
 .navbar .icon {
   position: absolute;
-  width: 140px;
+  //width: 140px;
   z-index: 2;
   top: -24px;
   right: 0;
 }
 
 .navbar .logo {
-  padding: 10px 0;
-  width: 230px;
+  padding-top: 7px;
+  //width: 230px;
   //margin-left: 125px;
 }
 .navbar .nav {
