--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5483,14 +5483,12 @@ form span.error {
 }
 .navbar .icon {
   position: absolute;
-  width: 140px;
   z-index: 2;
   top: -24px;
   right: 0;
 }
 .navbar .logo {
-  padding: 10px 0;
-  width: 230px;
+  padding-top: 7px;
 }
 .navbar .nav {
   margin: 0;
