--- a/public/css/main.less
+++ b/public/css/main.less
@@ -173,8 +173,7 @@ form {
   .border-radius(0);
   border: none;
   border-bottom: 1px solid #fff;
-  background: @red !important;
-  //#gradient > .vertical(@red, darken(@red, 10%));
+  #gradient > .vertical(@red, darken(@red, 5%));
   .nav .active > a {
     background-color: @red;
   }
