--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5514,6 +5514,12 @@ form span.error {
 .carousel {
   margin-bottom: 0;
 }
+.carousel-indicators li {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  behavior: url(/js/libs/PIE.htc);
+}
 /* ==========================================================================
    Icons 
   ======================================================================== */
