--- a/public/css/main.less
+++ b/public/css/main.less
@@ -227,6 +227,15 @@ form {
   margin-bottom: 0;
 }
 
+.carousel-indicators {
+  li {
+    .border-radius-for-pie(5px);
+  }
+}
+
+
+
+
 /* ==========================================================================
    Icons 
   ======================================================================== */
