--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5520,6 +5520,12 @@ form span.error {
   border-radius: 5px;
   behavior: url(/js/libs/PIE.htc);
 }
+.carousel-control {
+  -webkit-border-radius: 23px;
+  -moz-border-radius: 23px;
+  border-radius: 23px;
+  behavior: url(/js/libs/PIE.htc);
+}
 /* ==========================================================================
    Icons 
   ======================================================================== */
