--- a/views/carousel.jade
+++ b/views/carousel.jade
@@ -8,7 +8,7 @@
   //- Carousel items
   .carousel-inner
     .active.item 
-      img(src="/img/synesso-cafe.jpg")
+      img(src="/img/synchro-cafe.jpg")
     .item
       img(src="/img/pizza-oven.jpg")
     .item
