--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,10 +1,11 @@
-.navbar
+.navbar.navbar-static-top
   .navbar-inner
     .container
       a.brand(href="/") 
-        img.logo(src="/img/logo-white.png")
-        img.icon(src="/img/RB-icon.png")
+        img.logo(src="/img/logo-white.png", width="231", height="48")
+        //img.rb(src="/img/RB-icon.png")
       ul.nav
-        li: a(href="/") Products
+        li: a(href="/black") Black
+        li: a(href="/icons") Icons Spread
         li: a(href="/") About
         li: a(href="/") Contact
