--- a/views/icons.jade
+++ b/views/icons.jade
@@ -1,5 +1,37 @@
 include carousel
 #icons
+  .icon
+    .container
+      ul
+        li
+          h2 Pizza Ovens
+          .circle-bg
+            img(src="/img/pizza-oven-icon.png")
+          p We carry Morello Forni pizza ovens. Wood fired and gas and digital
+        li
+          h2 Pasta Equipment
+          .circle-bg
+            img(src="/img/pasta-icon.png")
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sagittis
+        li
+          h2 Gelato Machines
+          .circle-bg
+            img(src="/img/gelato-icon.png") 
+          p Odio non porttitor venenatis, tortor ligula luctus sem, et aliquet erat velit a arcu.
+        li
+          h2 Espresso Machines
+          .circle-bg
+            img(src="/img/espresso-machine-icon.png") 
+          p Praesent pretium velit elit, at porttitor nulla. Nulla nisl elit, convallis
+        li
+          h2  Juicers
+          .circle-bg
+            img(src="/img/juicers-icon.png") 
+          p Donec lacus massa, rutrum vitae dignissim luctus, blandit quis lacus. Morbi elementum.
+
+
+//include carousel
+//#icons
   .container
     .row
       .span3
