--- a/views/nav.jade
+++ b/views/nav.jade
@@ -2,10 +2,12 @@
   .navbar-inner
     .container
       a.brand(href="/") 
-        img.logo(src="/img/logo-white.png", width="231", height="48")
+        img.logo(src="/img/logo-white-gray-border.png")
         //img.rb(src="/img/RB-icon.png")
       ul.nav
-        li: a(href="/black") Black
-        li: a(href="/icons") Icons Spread
-        li: a(href="/") About
-        li: a(href="/") Contact
+        li: a(href="/v-red-white-border") A
+        li: a(href="/v-red-no-border") B
+        li: a(href="/v-red-border-gray") C
+        li: a(href="/v-white") D
+        li: a(href="/icons") Icons
+        li: a(href="/new") New
