--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7961,9 +7961,6 @@ h2,
 h3 {
   line-height: 1.3;
 }
-body {
-  background: url(/img/bg.png) repeat top left;
-}
 #alert {
   position: fixed;
   left: 50%;
@@ -8109,7 +8106,8 @@ form span.error {
   margin-bottom: 0;
 }
 .home-page .navbar .navbar-inner,
-.icons-page .navbar .navbar-inner {
+.icons-page .navbar .navbar-inner,
+.new-page .navbar .navbar-inner {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -8125,11 +8123,13 @@ form span.error {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec1c2d', endColorstr='#ffdc1223', GradientType=0);
 }
 .home-page .navbar .navbar-inner .nav .active > a,
-.icons-page .navbar .navbar-inner .nav .active > a {
+.icons-page .navbar .navbar-inner .nav .active > a,
+.new-page .navbar .navbar-inner .nav .active > a {
   background-color: #ec1c2d;
 }
 .home-page .navbar .navbar-inner .nav > li > a:hover,
-.icons-page .navbar .navbar-inner .nav > li > a:hover {
+.icons-page .navbar .navbar-inner .nav > li > a:hover,
+.new-page .navbar .navbar-inner .nav > li > a:hover {
   background-color: #ec1c2d;
 }
 .navbar .brand {
@@ -8253,12 +8253,6 @@ form span.error {
 #home .box.within h3 {
   font-size: 18px;
 }
-#icons .box {
-  float: left;
-}
-#icons .box img {
-  height: 100px;
-}
 /* ==========================================================================
    Footer 
    ========================================================================== */
@@ -8283,4 +8277,141 @@ footer .logo img {
 }
 footer .logo a {
   padding: 10px;
+}
+/* ==========================================================================
+   Icons 
+   ========================================================================== */
+#icons {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  border-top: 5px solid #333;
+}
+#icons .container {
+  width: 1170px;
+}
+#icons h1 {
+  font-family: SinaNova, arial;
+  font-family: Quicksand-Book, arial;
+  font-weight: normal;
+  text-align: center;
+  text-shadow: 1px 1px 0px #111;
+  color: white;
+  font-size: 46px;
+}
+#icons .icon img {
+  height: 115px;
+  padding-top: 20px;
+}
+#icons ul {
+  list-style: none;
+  *zoom: 1;
+  margin-top: 20px;
+}
+#icons ul:before,
+#icons ul:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+#icons ul:after {
+  clear: both;
+}
+#icons ul:before,
+#icons ul:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+#icons ul:after {
+  clear: both;
+}
+#icons li {
+  float: left;
+  margin: 0 20px;
+  text-align: center;
+  width: 189px;
+}
+#icons .circle-bg {
+  width: 163px;
+  height: 163px;
+  background-color: #fff;
+  border-radius: 115px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+#icons h2 {
+  font-weight: normal;
+  font-size: 22px;
+  color: #ec1c2d;
+  font-family: Nexa-Bold, arial;
+}
+#icons li span {
+  display: inline-block;
+  margin-top: 15px;
+}
+#icons li b {
+  font-size: 20px;
+}
+/* ==========================================================================
+   New 
+   ========================================================================== */
+#new {
+  background: #fff;
+}
+#new .container {
+  position: relative;
+}
+#new .headline {
+  margin: 50px 0 50px 0;
+}
+#new h1 {
+  text-align: center;
+  font-size: 36px;
+  margin-top: 30px;
+}
+#new h1 b {
+  font-family: georgia, serif;
+  font-size: 100px;
+  position: absolute;
+}
+#new h1 b.l {
+  left: 35px;
+  top: 17px;
+}
+#new h1 b.r {
+  top: 62px;
+}
+#new h3 {
+  text-align: center;
+}
+.thumbnails .thumbnail {
+  height: 684px;
+}
+.thumbnails h3 {
+  padding: 0 20px;
+}
+.thumbnails p {
+  padding: 0 20px;
+}
+.philosophy {
+  margin: 50px 0;
+  background-color: #fcfcfc;
+  background-image: -moz-linear-gradient(top, #ffffff, #f7f7f7);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f7f7f7));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f7f7f7);
+  background-image: -o-linear-gradient(top, #ffffff, #f7f7f7);
+  background-image: linear-gradient(to bottom, #ffffff, #f7f7f7);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff7f7f7', GradientType=0);
+  padding-bottom: 50px;
+}
+.philosophy p {
+  width: 900px;
+  margin: 0 auto;
+  line-height: 1.7;
+  font-size: 18px;
+  font-family: 'Libre Baskerville', serif;
+  font-weight: normal;
 }
