--- a/views/icons-in-navbar.jade
+++ b/views/icons-in-navbar.jade
@@ -1,27 +1,6 @@
-include carousel
-#home
-  .icons
-    .container
-      .row
-        .span2
-          img(src="/img/pizza-oven-icon.png")
-          h2 Pizza Ovens
-        .span2
-          img(src="/img/pasta-icon.png")
-          h2 Pasta Equipment
-        .span2
-          img(src="/img/gelato-icon.png") 
-          h2 Gelato Machines
-          //p Odio non porttitor venenatis, tortor ligula luctus sem, et aliquet erat velit a arcu.
-        .span2
-          img(src="/img/espresso-machine-icon.png") 
-          h2 Espresso Machines
-        .span2
-          img(src="/img/juicers-icon.png")
-          h2  Juicers
-        .span2
-          img(src="/img/wrench-icon.png")
-          h2  Service &amp; Support
+extends layout2
+block content
+  include carousel
   include section2
   .philosophy
     .container
