--- a/views/nav.jade
+++ b/views/nav.jade
@@ -2,12 +2,8 @@
   .navbar-inner
     .container
       a.brand(href="/") 
-        img.logo(src="/img/logo-white-gray-border.png")
-        //img.rb(src="/img/RB-icon.png")
+        img.logo(src="/img/logo.png")
       ul.nav
-        li: a(href="/v-red-white-border") A
-        li: a(href="/v-red-no-border") B
-        li: a(href="/v-red-border-gray") C
-        li: a(href="/v-white") D
-        li: a(href="/icons") Icons
-        li: a(href="/new") New
+        li: a(href="/products") Products 
+        li: a(href="/about") About 
+        li: a(href="/contact") Contact 
