--- a/views/icons-left.jade
+++ b/views/icons-left.jade
@@ -1,59 +1,27 @@
 include carousel
-#icons
-  .icon
-    .container
-      ul
-        li
-          h2 Pizza Ovens
-          .circle-bg
-            img(src="/img/pizza-oven-icon.png")
-          p We carry Morello Forni pizza ovens. Wood fired and gas and digital
-        li
-          h2 Pasta Equipment
-          .circle-bg
-            img(src="/img/pasta-icon.png")
-          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sagittis
-        li
-          h2 Gelato Machines
-          .circle-bg
-            img(src="/img/gelato-icon.png") 
-          p Odio non porttitor venenatis, tortor ligula luctus sem, et aliquet erat velit a arcu.
-        li
-          h2 Espresso Machines
-          .circle-bg
-            img(src="/img/espresso-machine-icon.png") 
-          p Praesent pretium velit elit, at porttitor nulla. Nulla nisl elit, convallis
-        li
-          h2  Juicers
-          .circle-bg
-            img(src="/img/juicers-icon.png") 
-          p Donec lacus massa, rutrum vitae dignissim luctus, blandit quis lacus. Morbi elementum.
-
-
-//include carousel
-//#icons
+#icons-left
   .container
     .row
       .span3
         .box 
           h2 Pizza Ovens
-          img(src="/img/pizza-oven-icon.png") 
+          img(src="/img/icons/red/pizza-oven-icon.png") 
           p We carry Morello Forni pizza ovens. Wood fired and gas and digital
         .box
           h2 Pasta Equipment 
-          img(src="/img/pasta-icon.png")
+          img(src="/img/icons/red/pasta-icon.png")
           p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sagittis
         .box
           h2 Gelato Machines 
-          img(src="/img/gelato-icon.png") 
+          img(src="/img/icons/red/gelato-icon.png") 
           p Odio non porttitor venenatis, tortor ligula luctus sem, et aliquet erat velit a arcu.
         .box
           h2 Espresso Machines 
-          img(src="/img/espresso-machine-icon.png") 
+          img(src="/img/icons/red/espresso-machine-icon.png") 
           p Praesent pretium velit elit, at porttitor nulla. Nulla nisl elit, convallis
         .box
           h2 Juicers 
-          img(src="/img/juicers-icon.png") 
+          img(src="/img/icons/red/juicers-icon.png") 
           p Donec lacus massa, rutrum vitae dignissim luctus, blandit quis lacus. Morbi elementum leo fermentum nunc
       .span9 
         .box.within
